fix: gap Media Container ajusted

--- a/src/components/InputMediaComposer/InputMediaComposer.module.scss
+++ b/src/components/InputMediaComposer/InputMediaComposer.module.scss
@@ -5,7 +5,7 @@
 
   display: flex;
   flex-wrap: wrap;
-  gap: 2rem;
+  gap: 0.8rem;
 
   align-items: center;
   justify-content: flex-start;
